# ai-agent-platform

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
agents/: __init__.py
agents/customer_service/: README.md  __init__.py  agent.yaml  fake_tools.py  graph.py  intent.py  rag_fixtures.py  state.py  tools.py
agents/customer_service/evals/: eval.yaml
datasets/customer_service/: README.md  regression_v1.jsonl
docs/: agent-development-guide.md  agent-generator-cli.md  checkpointing.md  citations.md  eval-playbook.md  human-in-the-loop.md  memory-memo-showcase.md  mock-api-adapters.md  observability.md  qdrant-retriever.md  rag.md  runtime-lifecycle.md  safety-pipeline.md  safety-playbook.md  scaffold-template.md  skills-showcase.md  telegram-local-demo.md  tool-audit.md  tool-execution.md  tool-gateway.md  tools.md
docs/adr/: 0001-use-monorepo-platform-architecture.md
docs/architecture/: overview.md  request-sequence.md  runtime-flow.md  tool-governance-flow.md
docs/pr/: PR-010-tool-gateway-policy.md  PR-011-documentation-architecture-refresh.md  PR-012-tool-execution-interface.md  PR-013-tool-call-audit-and-fake-tool.md  PR-014-safety-pipeline-skeleton.md  PR-015-rag-contracts-and-citation-enforcement.md  PR-016-project-template-and-example-structure.md  PR-017-agent-project-generator-cli.md  PR-018-current-chatbot-demo-reference-project.md  PR-019-qdrant-retriever-adapter.md  PR-020-production-like-mock-api-adapter.md  PR-021-wire-current-chatbot-demo-graph.md  PR-022-telegram-polling-worker-local-demo.md  PR-023-telegram-showcase-command-router.md  PR-024-human-in-the-loop-showcase.md  PR-025-memo-memory-showcase.md  PR-026-skills-showcase.md
examples/: __init__.py
examples/current_chatbot_demo/: README.md  __init__.py  architecture.md  n8n_payload.example.json  notes.md  qdrant_payload_schema.example.json
prompts/customer_service/: rag_answer.md
prompts/shared/: safety_policy.md  system_base.md
skills/container_tracking_triage/: skill.yaml
skills/customer_service_checklist/: skill.yaml
skills/support_ticket_creation/: skill.yaml
templates/agent-basic/: README.md  agent.yaml.template  graph.py.template  state.py.template
templates/agent-full-demo/: README.md  agent.yaml.template  graph.py.template  rag.py.template  safety.py.template  state.py.template  tools.py.template
templates/agent-rag/: README.md  agent.yaml.template  graph.py.template  rag.py.template  state.py.template
templates/agent-tool/: README.md  agent.yaml.template  graph.py.template  state.py.template  tools.py.template
tests/: test_chatbot_demo_structure.py  test_eval_datasets.py  test_eval_evaluators.py  test_eval_runner.py  test_memory_memo.py  test_repo_scaffold.py  test_templates_structure.py  test_tool_audit.py  test_tool_execution.py  test_tool_gateway.py  test_tool_registry.py
(+76 files in other folders)
